parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> declaration
Rule 5     function_definition -> declaration_specifiers declarator declaration_list compound_statement
Rule 6     function_definition -> declaration_specifiers declarator compound_statement
Rule 7     function_definition -> declarator declaration_list compound_statement
Rule 8     function_definition -> declarator compound_statement
Rule 9     primary_expression -> IDENTIFIER
Rule 10    primary_expression -> STRING
Rule 11    primary_expression -> INTEGER
Rule 12    primary_expression -> CHARACTER
Rule 13    primary_expression -> FLOAT
Rule 14    primary_expression -> LPAREN expression RPAREN
Rule 15    postfix_expression -> primary_expression
Rule 16    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 17    postfix_expression -> postfix_expression LPAREN RPAREN
Rule 18    postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 19    postfix_expression -> postfix_expression PERIOD IDENTIFIER
Rule 20    postfix_expression -> postfix_expression ARROW IDENTIFIER
Rule 21    postfix_expression -> postfix_expression INCREMENT
Rule 22    postfix_expression -> postfix_expression DECREMENT
Rule 23    argument_expression_list -> assignment_expression
Rule 24    argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 25    unary_expression -> postfix_expression
Rule 26    unary_expression -> INCREMENT unary_expression
Rule 27    unary_expression -> DECREMENT unary_expression
Rule 28    unary_expression -> unary_operator cast_expression
Rule 29    unary_expression -> SIZEOF unary_expression
Rule 30    unary_expression -> SIZEOF LPAREN type_name RPAREN
Rule 31    unary_operator -> MODULO
Rule 32    unary_operator -> TIMES
Rule 33    unary_operator -> PLUS
Rule 34    unary_operator -> MINUS
Rule 35    unary_operator -> NOT
Rule 36    unary_operator -> LNOT
Rule 37    cast_expression -> unary_expression
Rule 38    cast_expression -> LPAREN type_name RPAREN cast_expression
Rule 39    multiplicative_expression -> cast_expression
Rule 40    multiplicative_expression -> multiplicative_expression TIMES cast_expression
Rule 41    multiplicative_expression -> multiplicative_expression DIVIDE cast_expression
Rule 42    multiplicative_expression -> multiplicative_expression MODULO cast_expression
Rule 43    additive_expression -> multiplicative_expression
Rule 44    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 45    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 46    shift_expression -> additive_expression
Rule 47    shift_expression -> shift_expression LSHIFT additive_expression
Rule 48    shift_expression -> shift_expression RSHIFT additive_expression
Rule 49    relational_expression -> shift_expression
Rule 50    relational_expression -> relational_expression LT shift_expression
Rule 51    relational_expression -> relational_expression GT shift_expression
Rule 52    relational_expression -> relational_expression LE shift_expression
Rule 53    relational_expression -> relational_expression GE shift_expression
Rule 54    equality_expression -> relational_expression
Rule 55    equality_expression -> equality_expression EQ relational_expression
Rule 56    equality_expression -> equality_expression NE relational_expression
Rule 57    and_expression -> equality_expression
Rule 58    and_expression -> and_expression AND equality_expression
Rule 59    exclusive_or_expression -> and_expression
Rule 60    exclusive_or_expression -> exclusive_or_expression XOR and_expression
Rule 61    inclusive_or_expression -> exclusive_or_expression
Rule 62    inclusive_or_expression -> inclusive_or_expression OR exclusive_or_expression
Rule 63    logical_and_expression -> inclusive_or_expression
Rule 64    logical_and_expression -> logical_and_expression LAND inclusive_or_expression
Rule 65    logical_or_expression -> logical_and_expression
Rule 66    logical_or_expression -> logical_or_expression LOR logical_and_expression
Rule 67    conditional_expression -> logical_or_expression
Rule 68    conditional_expression -> logical_or_expression TERNARY expression COLON conditional_expression
Rule 69    assignment_expression -> conditional_expression
Rule 70    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 71    assignment_operator -> EQUALS
Rule 72    assignment_operator -> TIMESEQUAL
Rule 73    assignment_operator -> DIVEQUAL
Rule 74    assignment_operator -> MODEQUAL
Rule 75    assignment_operator -> PLUSEQUAL
Rule 76    assignment_operator -> MINUSEQUAL
Rule 77    assignment_operator -> LSHIFTEQUAL
Rule 78    assignment_operator -> RSHIFTEQUAL
Rule 79    assignment_operator -> ANDEQUAL
Rule 80    assignment_operator -> XOREQUAL
Rule 81    assignment_operator -> OREQUAL
Rule 82    expression -> assignment_expression
Rule 83    expression -> expression COMMA assignment_expression
Rule 84    constant_expression -> conditional_expression
Rule 85    declaration -> declaration_specifiers SEMI
Rule 86    declaration -> declaration_specifiers init_declarator_list SEMI
Rule 87    declaration_specifiers -> type_specifier
Rule 88    declaration_specifiers -> type_specifier declaration_specifiers
Rule 89    declaration_specifiers -> type_qualifier
Rule 90    declaration_specifiers -> type_qualifier declaration_specifiers
Rule 91    init_declarator_list -> init_declarator
Rule 92    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 93    init_declarator -> declarator
Rule 94    init_declarator -> declarator EQUALS initializer
Rule 95    type_specifier -> VOID
Rule 96    type_specifier -> CHAR
Rule 97    type_specifier -> SHORT
Rule 98    type_specifier -> INT
Rule 99    type_specifier -> LONG
Rule 100   type_specifier -> FLOAT
Rule 101   type_specifier -> DOUBLE
Rule 102   type_specifier -> SIGNED
Rule 103   type_specifier -> UNSIGNED
Rule 104   type_specifier -> struct_or_union_specifier
Rule 105   type_specifier -> enum_specifier
Rule 106   struct_or_union_specifier -> struct_or_union IDENTIFIER LBRACE struct_declaration_list RBRACE
Rule 107   struct_or_union_specifier -> struct_or_union LBRACE struct_declaration_list RBRACE
Rule 108   struct_or_union_specifier -> struct_or_union IDENTIFIER
Rule 109   struct_or_union -> STRUCT
Rule 110   struct_or_union -> UNION
Rule 111   struct_declaration -> specifier_qualifier_list struct_declarator_list SEMI
Rule 112   struct_declaration_list -> struct_declaration
Rule 113   struct_declaration_list -> struct_declaration_list struct_declaration
Rule 114   struct_declarator_list -> struct_declarator
Rule 115   struct_declarator_list -> struct_declarator_list COMMA struct_declarator
Rule 116   struct_declarator -> declarator
Rule 117   struct_declarator -> COLON constant_expression
Rule 118   struct_declarator -> declarator COLON constant_expression
Rule 119   specifier_qualifier_list -> type_specifier specifier_qualifier_list
Rule 120   specifier_qualifier_list -> type_specifier
Rule 121   specifier_qualifier_list -> type_qualifier specifier_qualifier_list
Rule 122   specifier_qualifier_list -> type_qualifier
Rule 123   enum_specifier -> ENUM LBRACE enumerator_list RBRACE
Rule 124   enum_specifier -> ENUM IDENTIFIER LBRACE enumerator_list RBRACE
Rule 125   enum_specifier -> ENUM IDENTIFIER
Rule 126   enumerator_list -> enumerator
Rule 127   enumerator_list -> enumerator_list COMMA enumerator
Rule 128   enumerator -> IDENTIFIER
Rule 129   enumerator -> IDENTIFIER EQUALS constant_expression
Rule 130   type_qualifier -> CONST
Rule 131   type_qualifier -> VOLATILE
Rule 132   declarator -> pointer direct_declarator
Rule 133   declarator -> direct_declarator
Rule 134   direct_declarator -> IDENTIFIER
Rule 135   direct_declarator -> LPAREN declarator RPAREN
Rule 136   direct_declarator -> direct_declarator LBRACKET constant_expression RBRACKET
Rule 137   direct_declarator -> direct_declarator LBRACKET RBRACKET
Rule 138   direct_declarator -> direct_declarator LPAREN parameter_type_list RPAREN
Rule 139   direct_declarator -> direct_declarator LPAREN identifier_list RPAREN
Rule 140   direct_declarator -> direct_declarator LPAREN RPAREN
Rule 141   pointer -> TIMES
Rule 142   pointer -> TIMES type_qualifier_list
Rule 143   pointer -> TIMES pointer
Rule 144   pointer -> TIMES type_qualifier_list pointer
Rule 145   type_qualifier_list -> type_qualifier
Rule 146   type_qualifier_list -> type_qualifier_list type_qualifier
Rule 147   parameter_type_list -> parameter_list
Rule 148   parameter_type_list -> parameter_list COMMA ELLIPSIS
Rule 149   parameter_list -> parameter_declaration
Rule 150   parameter_list -> parameter_list COMMA parameter_declaration
Rule 151   parameter_declaration -> declaration_specifiers declarator
Rule 152   parameter_declaration -> declaration_specifiers abstract_declarator
Rule 153   parameter_declaration -> declaration_specifiers
Rule 154   identifier_list -> IDENTIFIER
Rule 155   identifier_list -> identifier_list COMMA IDENTIFIER
Rule 156   type_name -> specifier_qualifier_list
Rule 157   type_name -> specifier_qualifier_list abstract_declarator
Rule 158   abstract_declarator -> pointer
Rule 159   abstract_declarator -> direct_abstract_declarator
Rule 160   abstract_declarator -> pointer direct_abstract_declarator
Rule 161   direct_abstract_declarator -> LPAREN abstract_declarator RPAREN
Rule 162   direct_abstract_declarator -> LBRACKET RBRACKET
Rule 163   direct_abstract_declarator -> LBRACKET constant_expression RBRACKET
Rule 164   direct_abstract_declarator -> direct_abstract_declarator LBRACKET RBRACKET
Rule 165   direct_abstract_declarator -> direct_abstract_declarator LBRACKET constant_expression RBRACKET
Rule 166   direct_abstract_declarator -> LPAREN RPAREN
Rule 167   direct_abstract_declarator -> LPAREN parameter_type_list RPAREN
Rule 168   direct_abstract_declarator -> direct_abstract_declarator LPAREN RPAREN
Rule 169   direct_abstract_declarator -> direct_abstract_declarator LPAREN parameter_type_list RPAREN
Rule 170   initializer -> assignment_expression
Rule 171   initializer -> LBRACE initializer_list RBRACE
Rule 172   initializer -> LBRACE initializer_list COMMA RBRACE
Rule 173   initializer_list -> initializer
Rule 174   initializer_list -> initializer_list COMMA initializer
Rule 175   statement -> labeled_statement
Rule 176   statement -> compound_statement
Rule 177   statement -> expression_statement
Rule 178   statement -> selection_statement
Rule 179   statement -> iteration_statement
Rule 180   statement -> jump_statement
Rule 181   labeled_statement -> IDENTIFIER COLON statement
Rule 182   labeled_statement -> CASE constant_expression COLON statement
Rule 183   labeled_statement -> DEFAULT COLON statement
Rule 184   compound_statement -> LBRACE RBRACE
Rule 185   compound_statement -> LBRACE statement_list RBRACE
Rule 186   compound_statement -> LBRACE declaration_list RBRACE
Rule 187   compound_statement -> LBRACE declaration_list statement_list RBRACE
Rule 188   declaration_list -> declaration
Rule 189   declaration_list -> declaration_list declaration
Rule 190   statement_list -> statement
Rule 191   statement_list -> statement_list statement
Rule 192   expression_statement -> SEMI
Rule 193   expression_statement -> expression SEMI
Rule 194   selection_statement -> IF LPAREN expression RPAREN statement
Rule 195   selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 196   selection_statement -> SWITCH LPAREN expression RPAREN statement
Rule 197   iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 198   iteration_statement -> DO statement WHILE LPAREN expression RPAREN SEMI
Rule 199   iteration_statement -> FOR LPAREN expression_statement expression_statement RPAREN statement
Rule 200   iteration_statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 201   jump_statement -> GOTO IDENTIFIER SEMI
Rule 202   jump_statement -> CONTINUE SEMI
Rule 203   jump_statement -> BREAK SEMI
Rule 204   jump_statement -> RETURN SEMI
Rule 205   jump_statement -> RETURN expression SEMI

Terminals, with rules where they appear

AND                  : 58
ANDEQUAL             : 79
ARROW                : 20
BREAK                : 203
CASE                 : 182
CHAR                 : 96
CHARACTER            : 12
COLON                : 68 117 118 181 182 183
COMMA                : 24 83 92 115 127 148 150 155 172 174
CONST                : 130
CONTINUE             : 202
DECREMENT            : 22 27
DEFAULT              : 183
DIVEQUAL             : 73
DIVIDE               : 41
DO                   : 198
DOUBLE               : 101
ELLIPSIS             : 148
ELSE                 : 195
ENUM                 : 123 124 125
EQ                   : 55
EQUALS               : 71 94 129
FLOAT                : 13 100
FOR                  : 199 200
GE                   : 53
GOTO                 : 201
GT                   : 51
IDENTIFIER           : 9 19 20 106 108 124 125 128 129 134 154 155 181 201
IF                   : 194 195
INCREMENT            : 21 26
INT                  : 98
INTEGER              : 11
LAND                 : 64
LBRACE               : 106 107 123 124 171 172 184 185 186 187
LBRACKET             : 16 136 137 162 163 164 165
LE                   : 52
LNOT                 : 36
LONG                 : 99
LOR                  : 66
LPAREN               : 14 17 18 30 38 135 138 139 140 161 166 167 168 169 194 195 196 197 198 199 200
LSHIFT               : 47
LSHIFTEQUAL          : 77
LT                   : 50
MINUS                : 34 45
MINUSEQUAL           : 76
MODEQUAL             : 74
MODULO               : 31 42
NE                   : 56
NOT                  : 35
OR                   : 62
OREQUAL              : 81
PERIOD               : 19
PLUS                 : 33 44
PLUSEQUAL            : 75
RBRACE               : 106 107 123 124 171 172 184 185 186 187
RBRACKET             : 16 136 137 162 163 164 165
RETURN               : 204 205
RPAREN               : 14 17 18 30 38 135 138 139 140 161 166 167 168 169 194 195 196 197 198 199 200
RSHIFT               : 48
RSHIFTEQUAL          : 78
SEMI                 : 85 86 111 192 193 198 201 202 203 204 205
SHORT                : 97
SIGNED               : 102
SIZEOF               : 29 30
STRING               : 10
STRUCT               : 109
SWITCH               : 196
TERNARY              : 68
TIMES                : 32 40 141 142 143 144
TIMESEQUAL           : 72
UNION                : 110
UNSIGNED             : 103
VOID                 : 95
VOLATILE             : 131
WHILE                : 197 198
XOR                  : 60
XOREQUAL             : 80
error                : 

Nonterminals, with rules where they appear

abstract_declarator  : 152 157 161
additive_expression  : 44 45 46 47 48
and_expression       : 58 59 60
argument_expression_list : 18 24
assignment_expression : 23 24 70 82 83 170
assignment_operator  : 70
cast_expression      : 28 38 39 40 41 42
compound_statement   : 5 6 7 8 176
conditional_expression : 68 69 84
constant_expression  : 117 118 129 136 163 165 182
declaration          : 4 188 189
declaration_list     : 5 7 186 187 189
declaration_specifiers : 5 6 85 86 88 90 151 152 153
declarator           : 5 6 7 8 93 94 116 118 135 151
direct_abstract_declarator : 159 160 164 165 168 169
direct_declarator    : 132 133 136 137 138 139 140
enum_specifier       : 105
enumerator           : 126 127
enumerator_list      : 123 124 127
equality_expression  : 55 56 57 58
exclusive_or_expression : 60 61 62
expression           : 14 16 68 83 193 194 195 196 197 198 200 205
expression_statement : 177 199 199 200 200
external_declaration : 1 2
function_definition  : 3
identifier_list      : 139 155
inclusive_or_expression : 62 63 64
init_declarator      : 91 92
init_declarator_list : 86 92
initializer          : 94 173 174
initializer_list     : 171 172 174
iteration_statement  : 179
jump_statement       : 180
labeled_statement    : 175
logical_and_expression : 64 65 66
logical_or_expression : 66 67 68
multiplicative_expression : 40 41 42 43 44 45
parameter_declaration : 149 150
parameter_list       : 147 148 150
parameter_type_list  : 138 167 169
pointer              : 132 143 144 158 160
postfix_expression   : 16 17 18 19 20 21 22 25
primary_expression   : 15
relational_expression : 50 51 52 53 54 55 56
selection_statement  : 178
shift_expression     : 47 48 49 50 51 52 53
specifier_qualifier_list : 111 119 121 156 157
statement            : 181 182 183 190 191 194 195 195 196 197 198 199 200
statement_list       : 185 187 191
struct_declaration   : 112 113
struct_declaration_list : 106 107 113
struct_declarator    : 114 115
struct_declarator_list : 111 115
struct_or_union      : 106 107 108
struct_or_union_specifier : 104
translation_unit     : 2 0
type_name            : 30 38
type_qualifier       : 89 90 121 122 145 146
type_qualifier_list  : 142 144 146
type_specifier       : 87 88 119 120
unary_expression     : 26 27 29 37 70
unary_operator       : 28

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (6) function_definition -> . declaration_specifiers declarator compound_statement
    (7) function_definition -> . declarator declaration_list compound_statement
    (8) function_definition -> . declarator compound_statement
    (85) declaration -> . declaration_specifiers SEMI
    (86) declaration -> . declaration_specifiers init_declarator_list SEMI
    (87) declaration_specifiers -> . type_specifier
    (88) declaration_specifiers -> . type_specifier declaration_specifiers
    (89) declaration_specifiers -> . type_qualifier
    (90) declaration_specifiers -> . type_qualifier declaration_specifiers
    (132) declarator -> . pointer direct_declarator
    (133) declarator -> . direct_declarator
    (95) type_specifier -> . VOID
    (96) type_specifier -> . CHAR
    (97) type_specifier -> . SHORT
    (98) type_specifier -> . INT
    (99) type_specifier -> . LONG
    (100) type_specifier -> . FLOAT
    (101) type_specifier -> . DOUBLE
    (102) type_specifier -> . SIGNED
    (103) type_specifier -> . UNSIGNED
    (104) type_specifier -> . struct_or_union_specifier
    (105) type_specifier -> . enum_specifier
    (130) type_qualifier -> . CONST
    (131) type_qualifier -> . VOLATILE
    (141) pointer -> . TIMES
    (142) pointer -> . TIMES type_qualifier_list
    (143) pointer -> . TIMES pointer
    (144) pointer -> . TIMES type_qualifier_list pointer
    (134) direct_declarator -> . IDENTIFIER
    (135) direct_declarator -> . LPAREN declarator RPAREN
    (136) direct_declarator -> . direct_declarator LBRACKET constant_expression RBRACKET
    (137) direct_declarator -> . direct_declarator LBRACKET RBRACKET
    (138) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (139) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (140) direct_declarator -> . direct_declarator LPAREN RPAREN
    (106) struct_or_union_specifier -> . struct_or_union IDENTIFIER LBRACE struct_declaration_list RBRACE
    (107) struct_or_union_specifier -> . struct_or_union LBRACE struct_declaration_list RBRACE
    (108) struct_or_union_specifier -> . struct_or_union IDENTIFIER
    (123) enum_specifier -> . ENUM LBRACE enumerator_list RBRACE
    (124) enum_specifier -> . ENUM IDENTIFIER LBRACE enumerator_list RBRACE
    (125) enum_specifier -> . ENUM IDENTIFIER
    (109) struct_or_union -> . STRUCT
    (110) struct_or_union -> . UNION

    VOID            shift and go to state 11
    CHAR            shift and go to state 12
    SHORT           shift and go to state 13
    INT             shift and go to state 14
    LONG            shift and go to state 15
    FLOAT           shift and go to state 16
    DOUBLE          shift and go to state 17
    SIGNED          shift and go to state 18
    UNSIGNED        shift and go to state 19
    CONST           shift and go to state 22
    VOLATILE        shift and go to state 23
    TIMES           shift and go to state 24
    IDENTIFIER      shift and go to state 25
    LPAREN          shift and go to state 26
    ENUM            shift and go to state 28
    STRUCT          shift and go to state 29
    UNION           shift and go to state 30

    translation_unit               shift and go to state 1
    external_declaration           shift and go to state 2
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 5
    declarator                     shift and go to state 6
    type_specifier                 shift and go to state 7
    type_qualifier                 shift and go to state 8
    pointer                        shift and go to state 9
    direct_declarator              shift and go to state 10
    struct_or_union_specifier      shift and go to state 20
    enum_specifier                 shift and go to state 21
    struct_or_union                shift and go to state 27

state 1

    (0) S' -> translation_unit .
    (2) translation_unit -> translation_unit . external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (6) function_definition -> . declaration_specifiers declarator compound_statement
    (7) function_definition -> . declarator declaration_list compound_statement
    (8) function_definition -> . declarator compound_statement
    (85) declaration -> . declaration_specifiers SEMI
    (86) declaration -> . declaration_specifiers init_declarator_list SEMI
    (87) declaration_specifiers -> . type_specifier
    (88) declaration_specifiers -> . type_specifier declaration_specifiers
    (89) declaration_specifiers -> . type_qualifier
    (90) declaration_specifiers -> . type_qualifier declaration_specifiers
    (132) declarator -> . pointer direct_declarator
    (133) declarator -> . direct_declarator
    (95) type_specifier -> . VOID
    (96) type_specifier -> . CHAR
    (97) type_specifier -> . SHORT
    (98) type_specifier -> . INT
    (99) type_specifier -> . LONG
    (100) type_specifier -> . FLOAT
    (101) type_specifier -> . DOUBLE
    (102) type_specifier -> . SIGNED
    (103) type_specifier -> . UNSIGNED
    (104) type_specifier -> . struct_or_union_specifier
    (105) type_specifier -> . enum_specifier
    (130) type_qualifier -> . CONST
    (131) type_qualifier -> . VOLATILE
    (141) pointer -> . TIMES
    (142) pointer -> . TIMES type_qualifier_list
    (143) pointer -> . TIMES pointer
    (144) pointer -> . TIMES type_qualifier_list pointer
    (134) direct_declarator -> . IDENTIFIER
    (135) direct_declarator -> . LPAREN declarator RPAREN
    (136) direct_declarator -> . direct_declarator LBRACKET constant_expression RBRACKET
    (137) direct_declarator -> . direct_declarator LBRACKET RBRACKET
    (138) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (139) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (140) direct_declarator -> . direct_declarator LPAREN RPAREN
    (106) struct_or_union_specifier -> . struct_or_union IDENTIFIER LBRACE struct_declaration_list RBRACE
    (107) struct_or_union_specifier -> . struct_or_union LBRACE struct_declaration_list RBRACE
    (108) struct_or_union_specifier -> . struct_or_union IDENTIFIER
    (123) enum_specifier -> . ENUM LBRACE enumerator_list RBRACE
    (124) enum_specifier -> . ENUM IDENTIFIER LBRACE enumerator_list RBRACE
    (125) enum_specifier -> . ENUM IDENTIFIER
    (109) struct_or_union -> . STRUCT
    (110) struct_or_union -> . UNION

    VOID            shift and go to state 11
    CHAR            shift and go to state 12
    SHORT           shift and go to state 13
    INT             shift and go to state 14
    LONG            shift and go to state 15
    FLOAT           shift and go to state 16
    DOUBLE          shift and go to state 17
    SIGNED          shift and go to state 18
    UNSIGNED        shift and go to state 19
    CONST           shift and go to state 22
    VOLATILE        shift and go to state 23
    TIMES           shift and go to state 24
    IDENTIFIER      shift and go to state 25
    LPAREN          shift and go to state 26
    ENUM            shift and go to state 28
    STRUCT          shift and go to state 29
    UNION           shift and go to state 30

    external_declaration           shift and go to state 31
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 5
    declarator                     shift and go to state 6
    type_specifier                 shift and go to state 7
    type_qualifier                 shift and go to state 8
    pointer                        shift and go to state 9
    direct_declarator              shift and go to state 10
    struct_or_union_specifier      shift and go to state 20
    enum_specifier                 shift and go to state 21
    struct_or_union                shift and go to state 27

state 2

    (1) translation_unit -> external_declaration .

    VOID            reduce using rule 1 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 1 (translation_unit -> external_declaration .)
    SHORT           reduce using rule 1 (translation_unit -> external_declaration .)
    INT             reduce using rule 1 (translation_unit -> external_declaration .)
    LONG            reduce using rule 1 (translation_unit -> external_declaration .)
    FLOAT           reduce using rule 1 (translation_unit -> external_declaration .)
    DOUBLE          reduce using rule 1 (translation_unit -> external_declaration .)
    SIGNED          reduce using rule 1 (translation_unit -> external_declaration .)
    UNSIGNED        reduce using rule 1 (translation_unit -> external_declaration .)
    CONST           reduce using rule 1 (translation_unit -> external_declaration .)
    VOLATILE        reduce using rule 1 (translation_unit -> external_declaration .)
    TIMES           reduce using rule 1 (translation_unit -> external_declaration .)
    IDENTIFIER      reduce using rule 1 (translation_unit -> external_declaration .)
    LPAREN          reduce using rule 1 (translation_unit -> external_declaration .)
    ENUM            reduce using rule 1 (translation_unit -> external_declaration .)
    STRUCT          reduce using rule 1 (translation_unit -> external_declaration .)
    UNION           reduce using rule 1 (translation_unit -> external_declaration .)
    $end            reduce using rule 1 (translation_unit -> external_declaration .)


state 3

    (3) external_declaration -> function_definition .

    VOID            reduce using rule 3 (external_declaration -> function_definition .)
    CHAR            reduce using rule 3 (external_declaration -> function_definition .)
    SHORT           reduce using rule 3 (external_declaration -> function_definition .)
    INT             reduce using rule 3 (external_declaration -> function_definition .)
    LONG            reduce using rule 3 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 3 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 3 (external_declaration -> function_definition .)
    SIGNED          reduce using rule 3 (external_declaration -> function_definition .)
    UNSIGNED        reduce using rule 3 (external_declaration -> function_definition .)
    CONST           reduce using rule 3 (external_declaration -> function_definition .)
    VOLATILE        reduce using rule 3 (external_declaration -> function_definition .)
    TIMES           reduce using rule 3 (external_declaration -> function_definition .)
    IDENTIFIER      reduce using rule 3 (external_declaration -> function_definition .)
    LPAREN          reduce using rule 3 (external_declaration -> function_definition .)
    ENUM            reduce using rule 3 (external_declaration -> function_definition .)
    STRUCT          reduce using rule 3 (external_declaration -> function_definition .)
    UNION           reduce using rule 3 (external_declaration -> function_definition .)
    $end            reduce using rule 3 (external_declaration -> function_definition .)


state 4

    (4) external_declaration -> declaration .

    VOID            reduce using rule 4 (external_declaration -> declaration .)
    CHAR            reduce using rule 4 (external_declaration -> declaration .)
    SHORT           reduce using rule 4 (external_declaration -> declaration .)
    INT             reduce using rule 4 (external_declaration -> declaration .)
    LONG            reduce using rule 4 (external_declaration -> declaration .)
    FLOAT           reduce using rule 4 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 4 (external_declaration -> declaration .)
    SIGNED          reduce using rule 4 (external_declaration -> declaration .)
    UNSIGNED        reduce using rule 4 (external_declaration -> declaration .)
    CONST           reduce using rule 4 (external_declaration -> declaration .)
    VOLATILE        reduce using rule 4 (external_declaration -> declaration .)
    TIMES           reduce using rule 4 (external_declaration -> declaration .)
    IDENTIFIER      reduce using rule 4 (external_declaration -> declaration .)
    LPAREN          reduce using rule 4 (external_declaration -> declaration .)
    ENUM            reduce using rule 4 (external_declaration -> declaration .)
    STRUCT          reduce using rule 4 (external_declaration -> declaration .)
    UNION           reduce using rule 4 (external_declaration -> declaration .)
    $end            reduce using rule 4 (external_declaration -> declaration .)


state 5

    (5) function_definition -> declaration_specifiers . declarator declaration_list compound_statement
    (6) function_definition -> declaration_specifiers . declarator compound_statement
    (85) declaration -> declaration_specifiers . SEMI
    (86) declaration -> declaration_specifiers . init_declarator_list SEMI
    (132) declarator -> . pointer direct_declarator
    (133) declarator -> . direct_declarator
    (91) init_declarator_list -> . init_declarator
    (92) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (141) pointer -> . TIMES
    (142) pointer -> . TIMES type_qualifier_list
    (143) pointer -> . TIMES pointer
    (144) pointer -> . TIMES type_qualifier_list pointer
    (134) direct_declarator -> . IDENTIFIER
    (135) direct_declarator -> . LPAREN declarator RPAREN
    (136) direct_declarator -> . direct_declarator LBRACKET constant_expression RBRACKET
    (137) direct_declarator -> . direct_declarator LBRACKET RBRACKET
    (138) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (139) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (140) direct_declarator -> . direct_declarator LPAREN RPAREN
    (93) init_declarator -> . declarator
    (94) init_declarator -> . declarator EQUALS initializer

    SEMI            shift and go to state 33
    TIMES           shift and go to state 24
    IDENTIFIER      shift and go to state 25
    LPAREN          shift and go to state 26

    declarator                     shift and go to state 32
    init_declarator_list           shift and go to state 34
    pointer                        shift and go to state 9
    direct_declarator              shift and go to state 10
    init_declarator                shift and go to state 35

state 6

    (7) function_definition -> declarator . declaration_list compound_statement
    (8) function_definition -> declarator . compound_statement
    (188) declaration_list -> . declaration
    (189) declaration_list -> . declaration_list declaration
    (184) compound_statement -> . LBRACE RBRACE
    (185) compound_statement -> . LBRACE statement_list RBRACE
    (186) compound_statement -> . LBRACE declaration_list RBRACE
    (187) compound_statement -> . LBRACE declaration_list statement_list RBRACE
    (85) declaration -> . declaration_specifiers SEMI
    (86) declaration -> . declaration_specifiers init_declarator_list SEMI
    (87) declaration_specifiers -> . type_specifier
    (88) declaration_specifiers -> . type_specifier declaration_specifiers
    (89) declaration_specifiers -> . type_qualifier
    (90) declaration_specifiers -> . type_qualifier declaration_specifiers
    (95) type_specifier -> . VOID
    (96) type_specifier -> . CHAR
    (97) type_specifier -> . SHORT
    (98) type_specifier -> . INT
    (99) type_specifier -> . LONG
    (100) type_specifier -> . FLOAT
    (101) type_specifier -> . DOUBLE
    (102) type_specifier -> . SIGNED
    (103) type_specifier -> . UNSIGNED
    (104) type_specifier -> . struct_or_union_specifier
    (105) type_specifier -> . enum_specifier
    (130) type_qualifier -> . CONST
    (131) type_qualifier -> . VOLATILE
    (106) struct_or_union_specifier -> . struct_or_union IDENTIFIER LBRACE struct_declaration_list RBRACE
    (107) struct_or_union_specifier -> . struct_or_union LBRACE struct_declaration_list RBRACE
    (108) struct_or_union_specifier -> . struct_or_union IDENTIFIER
    (123) enum_specifier -> . ENUM LBRACE enumerator_list RBRACE
    (124) enum_specifier -> . ENUM IDENTIFIER LBRACE enumerator_list RBRACE
    (125) enum_specifier -> . ENUM IDENTIFIER
    (109) struct_or_union -> . STRUCT
    (110) struct_or_union -> . UNION

    LBRACE          shift and go to state 39
    VOID            shift and go to state 11
    CHAR            shift and go to state 12
    SHORT           shift and go to state 13
    INT             shift and go to state 14
    LONG            shift and go to state 15
    FLOAT           shift and go to state 16
    DOUBLE          shift and go to state 17
    SIGNED          shift and go to state 18
    UNSIGNED        shift and go to state 19
    CONST           shift and go to state 22
    VOLATILE        shift and go to state 23
    ENUM            shift and go to state 28
    STRUCT          shift and go to state 29
    UNION           shift and go to state 30

    declaration_list               shift and go to state 36
    compound_statement             shift and go to state 37
    declaration                    shift and go to state 38
    declaration_specifiers         shift and go to state 40
    type_specifier                 shift and go to state 7
    type_qualifier                 shift and go to state 8
    struct_or_union_specifier      shift and go to state 20
    enum_specifier                 shift and go to state 21
    struct_or_union                shift and go to state 27

state 7
